@@ -3,14 +3,14 @@ CREATE TABLE turba_objects (
     owner_id VARCHAR(255) NOT NULL,
     object_type VARCHAR(255) DEFAULT 'Object' NOT NULL,
     object_uid VARCHAR(255),
-    object_members BLOB,
+    object_members IMAGE,
     object_firstname VARCHAR(255),
     object_lastname VARCHAR(255),
     object_middlenames VARCHAR(255),
     object_nameprefix VARCHAR(32),
     object_namesuffix VARCHAR(32),
     object_alias VARCHAR(32),
-    object_photo BLOB,
+    object_photo IMAGE,
     object_phototype VARCHAR(10),
     object_bday VARCHAR(10),
     object_homestreet VARCHAR(255),
@@ -35,7 +35,7 @@ CREATE TABLE turba_objects (
     object_pager VARCHAR(25),
     object_title VARCHAR(255),
     object_role VARCHAR(255),
-    object_logo BLOB,
+    object_logo IMAGE,
     object_logotype VARCHAR(10),
     object_company VARCHAR(255),
     object_category VARCHAR(80),
